--- a/Pyhon_website.html
+++ b/Pyhon_website.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Python Website</title>
+        <title>Python Website Git</title>
         <link rel="stylesheet" type="text/css"  href="style.css">
     </head>
     <body>
